--- a/examples/example-babylon1/index.html
+++ b/examples/example-babylon1/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>example-babylon1</title>
-    <script src="dist/index.js"></script>
+    <script type="module" src="dist/index.js"></script>
 </head>
 <body>
 
