--- a/examples/example-babylon1/index.html
+++ b/examples/example-babylon1/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>example-babylon1</title>
+    <link rel="icon" href="data:image/gif;base64,R0lGODlhAQABAAAAACw=" />
     <style>
       html,
       body {
